--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 189, 93, 56;
+  --bs-primary-rgb: 200, 150, 102;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -63,7 +63,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+  --bs-body-bg: #e1d8d8;
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: #dee2e6;
@@ -74,7 +74,7 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #bd5d38;
+  --bs-link-color: #a87d54;
   --bs-link-hover-color: #974a2d;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
@@ -130,7 +130,7 @@ h1,
   font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
-  color: #343a40;
+  color: #e1d8d8;
 }
 
 h1,
@@ -651,7 +651,11 @@ progress {
 
 .img-fluid {
   max-width: 100%;
-  height: auto;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+
 }
 
 .img-thumbnail {
@@ -12647,6 +12651,7 @@ h1,
 p.lead {
   font-size: 1.15rem;
   font-weight: 400;
+  color: #e1d8d8;
 }
 
 .subheading {
@@ -12654,6 +12659,7 @@ p.lead {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 1.5rem;
+  color: #e1d8d8;
 }
 
 #sideNav {
@@ -12668,7 +12674,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #d48a6e;
+  outline-color: var(--bs-primary);
 }
 
 @media (min-width: 992px) {
@@ -12726,8 +12732,8 @@ p.lead {
   height: 4rem;
   width: 4rem;
 
-  background-color: #495057;
-  color: #fff;
+  background-color: #4a6d75;
+  color: #e1d8d8;
   border-radius: 100%;
   font-size: 2.5rem;
   margin-right: 1.5rem;
@@ -12739,7 +12745,7 @@ p.lead {
 }
 
 .social-icons .social-icon:hover {
-  background-color: #bd5d38;
+  background-color: #a87d54;
 }
 
 .dev-icons {
@@ -12779,17 +12785,17 @@ section.resume-section .resume-section-content {
 /* ! change thisCustom CSS for the sidebar */
 #sideNav {
   background-color: #2d545e !important;
-  /* Navy Blue for sidebar background */
+  /* V for sidebar background */
 }
 
 #sideNav .nav-link {
-  color: #FFFFFF !important;
+  color: #e1d8d8 !important;
   /* White text */
 }
 
 #sideNav .nav-link:hover {
   color: #c89666 !important;
-  /* Bold Yellow on hover */
+  /* Sahara Yellow on hover */
 }
 
 #sideNav .navbar-brand {
@@ -12798,7 +12804,7 @@ section.resume-section .resume-section-content {
 }
 
 .container-fluid {
-  background-color: #ECECEC;
+  background-color: #343a40;
   /* Light Gray */
   color: #333333;
   /* Dark Gray text */
